# xray

./: .gitignore  CMakeLists.txt  ColorManager.cpp  ColorManager.h  Image.cpp  Image.h  MainWindow.cpp  MainWindow.h  Viewport.cpp  Viewport.h  main.cpp
colormanagement/: ColorManager.cpp  ColorManager.h  OCIOTransform.cpp  OCIOTransform.h
